# koi

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build-macos.yml
.skl/skills/project-template-from-projects/: SKILL.md
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs  menu.rs  scanner.rs  watcher.rs
src/app/: App.tsx  routes.ts
src/components/: CommandMenu.tsx  FocusView.tsx  FolderPill.tsx  MediaContextMenu.tsx  MediaGrid.tsx  MediaTile.tsx  PalettePopover.tsx  SettingsWindow.tsx  TagEditor.tsx  TopBar.tsx
src/lib/: colorIndex.ts  media.ts  search.ts  shortcuts.ts  sound.ts  types.ts
src/state/: useKeyboard.ts  useLibraryStore.ts
src/styles/: app.css
