[package]
name = "koi"
version = "0.1.1"
description = "A tiny local moodboard for folders."
authors = ["koi"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
rfd = "0.16"
notify = "6.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "bmp", "tiff"] }
tauri = { version = "2.5.0", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-opener = "2.2.6"
